changed base font, fixed text alignment over images, played with color scheme

--- a/app/styles/_content.scss
+++ b/app/styles/_content.scss
@@ -1,10 +1,12 @@
 body {
   color:$brand-primary;
+  font-family: $font-family-cursive;
 }
 
 .marketing {
   h4 {
     color: $brand-warning;
+
   }
   p {
     color: $brand-purple;
@@ -71,6 +73,7 @@ ul.nav.navbar-nav li.active a {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
+  font-size: 1.5em;
 }
 
 .container-narrow > hr {
