--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,5 +1,5 @@
 $bootstrap-sass-asset-helper: false !default;
-//
+
 // Variables
 // --------------------------------------------------
 
@@ -50,6 +50,7 @@ $font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:        $font-family-sans-serif !default;
+$font-family-cursive:     'Mountains of Christmas', cursive;
 
 $font-size-base:          14px !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
